--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -140,6 +140,7 @@
                 android:background="@color/black"/>-->
 
             <Button
+                android:id="@+id/add"
                 android:layout_width="match_parent"
                 android:layout_height="55dp"
                 android:background="@drawable/action_button"
