--- a/app/src/main/res/layout/item_category.xml
+++ b/app/src/main/res/layout/item_category.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="5dp"
     android:background="@drawable/item_bg">
@@ -31,7 +31,8 @@
         android:text="@string/app_name"
         android:textColor="@color/white"
         android:gravity="center"
-        android:textSize="30sp"
+        android:textSize="25sp"
+        android:layout_margin="5dp"
         android:textStyle="bold"/>
 
 </FrameLayout>
