--- a/app/src/main/res/layout/item_history.xml
+++ b/app/src/main/res/layout/item_history.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent"
         android:layout_weight="0.5"
         android:text="@string/app_name"
+        android:singleLine="true"
         android:gravity="center_vertical"
         android:textColor="@color/black"/>
 
