--- a/app/src/main/res/layout/item_result.xml
+++ b/app/src/main/res/layout/item_result.xml
@@ -49,6 +49,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/price"
+                    android:visibility="gone"
+                    android:layout_marginEnd="15dp"
                     android:textColor="@color/grey"
                     android:textSize="15sp"
                     tools:ignore="TextContrastCheck" />
@@ -57,7 +59,6 @@
                     android:id="@+id/price"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="15dp"
                     android:text="@string/price"
                     android:textColor="@color/black"
                     android:textSize="15sp" />
@@ -87,7 +88,7 @@
             android:id="@+id/action"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:src="@drawable/ic_trash"
+            android:src="@drawable/ic_love"
             android:layout_gravity="center"
             tools:ignore="ContentDescription" />
 
