--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,7 @@
         <item name="colorPrimaryDark">@color/black</item>
         <item name="colorAccent">@color/black</item>
         <item name="fontFamily">@font/montserrat</item>
+        <item name="android:screenOrientation">portrait</item>
 
     </style>
 
