--- a/app/src/main/res/layout/fragment_view.xml
+++ b/app/src/main/res/layout/fragment_view.xml
@@ -50,6 +50,7 @@
                 android:layout_height="350dp"
                 android:scaleType="center"
                 android:background="@color/white"
+                android:clickable="false"
                 android:layout_marginTop="15dp"
                 android:layout_marginEnd="15dp"
                 android:layout_marginStart="15dp"/>
